Update ServerTypes and UPnP Library

--- a/src/main/java/me/Logicism/LogSM/gui/LogSMSettings.form
+++ b/src/main/java/me/Logicism/LogSM/gui/LogSMSettings.form
@@ -85,7 +85,7 @@
             </constraints>
             <properties>
               <model>
-                <item value="Cling"/>
+                <item value="jUPnP"/>
                 <item value="WaifUPnP"/>
                 <item value="weupnp"/>
               </model>
