--- a/src/main/java/me/Logicism/LogSM/gui/ServerCreateDialog.form
+++ b/src/main/java/me/Logicism/LogSM/gui/ServerCreateDialog.form
@@ -85,13 +85,12 @@
                 <item value="Spigot"/>
                 <item value="Paper"/>
                 <item value="Purpur"/>
-                <item value="Airplane"/>
                 <item value="BungeeCord"/>
-                <item value="Waterfall"/>
                 <item value="Velocity"/>
                 <item value="NanoLimbo"/>
                 <item value="Forge"/>
-                <item value="Magma"/>
+                <item value="NeoForge"/>
+                <item value="Ketting"/>
                 <item value="Mohist"/>
                 <item value="SpongeVanilla"/>
                 <item value="Fabric"/>
